# duo-web

./: .gitignore  CNAME  POSTING.md  README.md  astro.config.mjs  config.js  data.js  i18n.js  index.html  index.js  nodemon.json  package-lock.json  package.json  pm2.json  webpack.config.js
.github/workflows/: build.yml  codacy-analysis.yml  facebook-publish.yml
Docker/: docker-compose.yml  web-compose.yml  web-node.dockerfile
archive/: index.html
archive/src/: main.jsx
assets/: index-40ef30a2.css  index-e723b12d.js  index-fd007914.js
locales/en/: common.json
locales/tr/: common.json
pages/: _app.js  _document.js  index.js
pages/EN/: about.md  contact.md  links.md  skills.md
pages/TR/: about.md  contact.md  links.md  skills.md
pages/about/: About.js  index.js
pages/geo/: Editor.js  Map.js  index.js
public/: CNAME  _headers  robots.txt
public/models/: realesrgan_x4_anime.onnx
redux/: store.js
redux/reducers/: geo.js  index.js
scripts/: build-wasm.ps1
source/: filler.js  ie9.js  main.js  main.scss
source/ie9/: anim-quickfix.js
src/: App.jsx  content.config.ts  main.jsx  theme.js  themes.js
src/assets/: opengraph.psd
src/components/: AboutSection.tsx  GridBackground.tsx  Header.jsx  Header.tsx  Hero.tsx  LinksPage.tsx  Skill.js  SocialsSection.tsx  TopBar.js
src/css/: main.css
views/: index.pug
wasm/imvector/: Cargo.toml
wasm/imvector/pkg/: imvector.d.ts  imvector.js  imvector_bg.wasm  imvector_bg.wasm.d.ts
wasm/imvector/src/: bilateral.rs  classify.rs  lib.rs  quantize.rs  shapes.rs  trace.rs  tv_denoise.rs
(+79 files in other folders)
